<?xml version="1.0"?>
<package format="2">
  <name>cartgrapher_navigation</name>
  <version>0.0.0</version>
  <description>The cartgrapher_navigation package</description>

  <maintainer email="ramune@todo.todo">ramune</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>

  <export></export>
</package>
